== HEAD
  * Major Enhancements
    * Add command line importer functionality (#253)
  * Minor Enhancements
    * Switch to Albino gem
    * Bundler support
    * Use English library to avoid hoops (#292)
    * Add Posterous importer (#254)
    * Fixes for Wordpress importer (#274, #252, #271)
  * Bug Fixes
    * Secure additional path exploits

== 0.10.0 / 2010-12-16
  * Bug Fixes
    * Add --no-server option.

== 0.9.0 / 2010-12-15
  * Minor Enhancements
    * Use OptionParser's [no-] functionality for better boolean parsing.
    * Add Drupal migrator (#245)
    * Complain about YAML and Liquid errors (#249)
    * Remove orphaned files during regeneration (#247)
    * Add Marley migrator (#28)

== 0.8.0 / 2010-11-22
  * Minor Enhancements
    * Add wordpress.com importer (#207)
    * Add --limit-posts cli option (#212)
    * Add uri_escape filter (#234)
    * Add --base-url cli option (#235)
    * Improve MT migrator (#238)
    * Add kramdown support (#239)
  * Bug Fixes
    * Fixed filename basename generation (#208)
    * Set mode to UTF8 on Sequel connections (#237)
    * Prevent _includes dir from being a symlink

== 0.7.0 / 2010-08-24
  * Minor Enhancements
    * Add support for rdiscount extensions (#173)
  * Bug Fixes
    * Highlight should not be able to render local files
    * The site configuration may not always provide a 'time' setting (#184)

== 0.6.2 / 2010-06-25
  * Bug Fixes
    * Fix Rakefile 'release' task (tag pushing was missing origin)
    * Ensure that RedCloth is loaded when textilize filter is used (#183)
    * Expand source, destination, and plugin paths (#180)
    * Fix page.url to include full relative path (#181)

== 0.6.1 / 2010-06-24
  * Bug Fixes
    * Fix Markdown Pygments prefix and suffix (#178)

== 0.6.0 / 2010-06-23
  * Major Enhancements
    * Proper plugin system (#19, #100)
    * Add safe mode so unsafe converters/generators can be added
    * Maruku is now the only processor dependency installed by default.