@@ -242,7 +242,11 @@ else
   puts "Building site: #{source} -> #{destination}"
   begin
     site.process
-  rescue Jekyll::FatalException
+  rescue Jekyll::FatalException => e
+    puts
+    puts "ERROR: YOUR SITE COULD NOT BE BUILT:"
+    puts "------------------------------------"
+    puts e.message
     exit(1)
   end
   puts "Successfully generated site: #{source} -> #{destination}"
